cmake_minimum_required(VERSION 3.21)
project(CPlusPlus)

set(CMAKE_CXX_STANDARD 11)

add_executable(CPlusPlus_Runoob_001 菜鸟教程/001-HelloWorld/TestMain.cpp)
add_executable(CPlusPlus_Runoob_002 菜鸟教程/002-注释/TestMain.cpp)
add_executable(CPlusPlus_Runoob_003 菜鸟教程/003-数据类型/TestMain.cpp )

add_executable(CPlusPlus_HeiMa_003 黑马程序员/003-变量/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_004 黑马程序员/004-常量/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_005 黑马程序员/005-关键字/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_006 黑马程序员/006-标识符命名规则/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_007 黑马程序员/007-整形/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_008 黑马程序员/008-sizeof关键字/TestMain.cpp)