cmake_minimum_required(VERSION 3.21)
project(CPlusPlus)

set(CMAKE_CXX_STANDARD 11)

add_executable(CPlusPlus_Runoob_001 菜鸟教程/001-HelloWorld/TestMain.cpp)
add_executable(CPlusPlus_Runoob_002 菜鸟教程/002-注释/TestMain.cpp)
add_executable(CPlusPlus_Runoob_003 菜鸟教程/003-数据类型/TestMain.cpp)
add_executable(CPlusPlus_Runoob_004 菜鸟教程/004-变量类型/TestMain.cpp)


add_executable(CPlusPlus_HeiMa_003 黑马程序员/003-变量/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_004 黑马程序员/004-常量/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_005 黑马程序员/005-关键字/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_006 黑马程序员/006-标识符命名规则/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_007 黑马程序员/007-整型/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_008 黑马程序员/008-sizeof关键字/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_009 黑马程序员/009-实型/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_010 黑马程序员/010-字符型/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_011 黑马程序员/011-转义字符/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_012 黑马程序员/012-字符串型/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_013 黑马程序员/013-布尔类型/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_014 黑马程序员/014-数据的输入/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_015 黑马程序员/015-算术运算符/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_016 黑马程序员/016-取余运算符/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_017 黑马程序员/017-递增运算符/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_018 黑马程序员/018-赋值运算符/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_019 黑马程序员/019-比较运算符/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_020 黑马程序员/020-逻辑运算符/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_021 黑马程序员/021-顺序结构/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_022 黑马程序员/022-三目运算符/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_023 黑马程序员/023-switch语句/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_024 黑马程序员/024-while循环语句/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_025 黑马程序员/025-doAndwhile循环语句/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_026 黑马程序员/026-for循环语句/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_027 黑马程序员/027-跳转语句/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_028 黑马程序员/028-continue语句/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_029 黑马程序员/029-goto语句/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_030 黑马程序员/030-数组一维/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_031 黑马程序员/031-冒泡排序/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_032 黑马程序员/032-数组二维/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_033 黑马程序员/033-函数/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_034 黑马程序员/034-函数的声明/TestMain.cpp)