cmake_minimum_required(VERSION 3.21)
project(CPlusPlus)

set(CMAKE_CXX_STANDARD 11)

add_executable(CPlusPlus_HeiMa_003 黑马程序员/003-变量/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_004 黑马程序员/004-常量/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_005 黑马程序员/005-关键字/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_006 黑马程序员/006-标识符命名规则/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_007 黑马程序员/007-整型/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_008 黑马程序员/008-sizeof关键字/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_009 黑马程序员/009-实型/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_010 黑马程序员/010-字符型/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_011 黑马程序员/011-转义字符/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_012 黑马程序员/012-字符串型/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_013 黑马程序员/013-布尔类型/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_014 黑马程序员/014-数据的输入/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_015 黑马程序员/015-算术运算符/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_016 黑马程序员/016-取余运算符/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_017 黑马程序员/017-递增运算符/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_018 黑马程序员/018-赋值运算符/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_019 黑马程序员/019-比较运算符/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_020 黑马程序员/020-逻辑运算符/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_021 黑马程序员/021-顺序结构/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_022 黑马程序员/022-三目运算符/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_023 黑马程序员/023-switch语句/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_024 黑马程序员/024-while循环语句/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_025 黑马程序员/025-do和while循环语句/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_026 黑马程序员/026-for循环语句/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_027 黑马程序员/027-跳转语句/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_028 黑马程序员/028-continue语句/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_029 黑马程序员/029-goto语句/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_030 黑马程序员/030-数组一维/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_031 黑马程序员/031-冒泡排序/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_032 黑马程序员/032-数组二维/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_033 黑马程序员/033-函数/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_034 黑马程序员/034-函数的声明/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_035 黑马程序员/035-函数的分文件编写/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_036 黑马程序员/036-指针的定义与使用/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_037 黑马程序员/037-指针占用的内存空间/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_038 黑马程序员/038-空指针与野指针/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_039 黑马程序员/039-const修饰指针/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_040 黑马程序员/040-指针和数组/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_041 黑马程序员/041-指针和函数/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_042 黑马程序员/042-指针数组函数结合使用/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_043 黑马程序员/043-结构体的定义与使用/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_044 黑马程序员/044-结构体数组/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_045 黑马程序员/045-结构体指针/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_046 黑马程序员/046-结构体嵌套结构体/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_047 黑马程序员/047-结构体做为函数参数/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_048 黑马程序员/048-结构体中使用const/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_049 黑马程序员/049-内存四区/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_050 黑马程序员/050-new操作符/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_051 黑马程序员/051-引用的基本语法/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_052 黑马程序员/052-引用的注意事项/TestMain.cpp)
add_executable(CPlusPlus_HeiMa_053 黑马程序员/053-引用做函数参数/TestMain.cpp)